# ai-civilization-engine

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  Taskfile.yml  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: _reusable-service.yml  agent-service.yml  dashboard.yml  event-service.yml  events-contracts.yml  government-service.yml  memory-service.yml  minecraft-service.yml
apps/dashboard/: next.config.ts  package.json
bench/: bench_llm_gate.py  bench_producer_batch.py  bench_query_cache.py  bench_relationship_batch.py  run_all.py  runner.py  stats.py
bench/results/: REPORT.md  llm_gate.csv  llm_gate.json  producer_batch.csv  producer_batch.json  (+4 more)
docs/: HANDOFF.md  demo-m1.md  demo-m2.md  demo-rb.md  demo-sprint-1.md  fresh-install-audit.md
experiments/: README.md
film/: README.md  flagship-slice.json  flagship-take-1.srt  pov-grid.html
patches/: minecraft-data+3.111.0.patch
scripts/: despawn-fleet.mjs  drill-rb1.mjs  drill-rb2.mjs  paper-spike.js  produce-cmd.mjs  produce-gov-cmd.mjs  provision-topics.mjs  race-rb2.mjs  render-race-film.py  seed-flagship.mjs  smoke.js  spawn-fleet.mjs  spawn-teams.mjs
services/agent-service/: Dockerfile  alembic-agent.ini  alembic.ini  pyproject.toml
services/agent-service/migrations/: env.py
services/agent-service/migrations/versions/: 0001_memories.py
services/agent-service/migrations_agent/: env.py
services/agent-service/migrations_agent/versions/: 0001_villagers.py  0002_relationship_reason.py
services/agent-service/scripts/: replay_race_brain.py
services/agent-service/seed/: villagers.json
services/agent-service/src/agent_service/: db.py  logging.py  main.py  memory_client.py  metrics.py  settings.py
services/agent-service/src/agent_service/brain/: awareness.py  civics.py  graph.py  prompts.py  race.py  race_rehydrate.py  scheduler.py
services/agent-service/src/agent_service/events/: envelope.py
services/agent-service/src/agent_service/kafka/: percepts.py  producer.py
services/agent-service/src/agent_service/llm/: __init__.py  budget.py  contract.py  decide.py  providers.py
services/agent-service/src/agent_service/memory/: __init__.py  embeddings.py  scoring.py  service.py
services/agent-service/src/agent_service/villagers/: models.py  relationships.py  repo.py  seed.py
services/agent-service/src/agent_service/world/: gateway.py
services/agent-service/tests/: conftest.py  test_civics.py  test_embeddings.py  test_envelope.py  test_llm_budget.py  test_llm_contract.py  test_llm_decide.py  test_llm_providers.py  test_memory_integration.py  test_percept_fanout.py  test_prompts.py  test_race_brain.py  test_race_rehydrate.py  test_relationships_in_tick.py  test_relationships_repo.py  test_scheduler_reactive.py  test_scoring.py  test_seed.py  test_survival_brain.py  test_tick_graph.py
services/memory-service/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
services/memory-service/migrations/: env.py
services/memory-service/migrations/versions/: 0002_reflection_scan_index.py
services/memory-service/src/memory_service/: db.py  embeddings.py  envelope.py  kafka.py  llm.py  logging.py  main.py  metrics.py  models.py  reflection.py  retrievals.py  service.py  settings.py
services/memory-service/tests/: conftest.py  test_embeddings.py  test_llm.py  test_memory_integration.py  test_reflection.py  test_reflection_integration.py  test_retrievals.py  test_scoring.py
(+237 files in other folders)
