[project]
name = "agent-service"
version = "0.1.0"
description = "The cognitive loop: perceive -> retrieve -> deliberate -> act -> reflect. Hosts the Memory module (own logical DB) until its M1 extraction."
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "pgvector>=0.3.6",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "prometheus-client>=0.21",
    "structlog>=24.4",
    "uuid6>=2024.7.10",
    "jsonschema>=4.23",
    "aiokafka>=0.12",
    "redis>=5.2",
    "langgraph>=0.2.60",
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "testcontainers[postgres]>=4.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_service"]
